Fixed question text alignment
Fixed text alignment to justify

--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,7 @@ footer {
 
 #qText{
   font-size: 20px;
+  text-align: justify;
   font-family: 'Montserrat', sans-serif;
 }
 
